# idlerpgautobattler

./: .dockerignore  .gitignore  README.md  database_structure.sql  db.Dockerfile  dev.Dockerfile  docker-compose.yml  pyproject.toml  tasks.py  tsconfig.json
src/: app.py  db.py  routes.py
src/documentation/: dev_spellbook.md
src/repositories/character/: models.py  views.py
src/repositories/user/: models.py  user_repository.py  views.py
src/static/: base.js  base.ts  theme.css
src/templates/: create_account.html  index.html  layout.html  login.html
