[tool.poetry]
name = "GameProject"
version = "0.0.1"
description = "Prototype idler game with PixiJS"
authors = ["Lauri <1960498+msha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pylint = "^2.12.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
