[tool.poetry]
name = "GameProject"
version = "0.0.1"
description = "Prototype idler game with PixiJS"
authors = ["Lauri <1960498+msha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
Werkzeug = "^2.0.2"
psycopg2 = "^2.9.3"
flask-login = "^0.5.0"
jsonpickle = "^2.0.0"
Flask-SocketIO = "^5.1.1"
pylint = "^2.12.2"
Flask-APScheduler = "^1.12.3"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
psycopg2-binary = "*"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
